--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,6 +7,60 @@ main {
   position: relative;
   z-index: 2;
   transition: transform 500ms cubic-bezier(0.13, 0.53, 0.38, 0.97);
+  display: flex;
+  align-items: center;
+}
+
+h2 {
+  color: rgb(34, 40, 94);
+  font-family: 'Rubik', sans-serif;
+  font-size: clamp(2em, 2vw, 4rem);
+  font-weight: 400;
+  margin: 0;
+  padding: 20px;
+  text-align: center;
+}
+
+h2 > .magic {
+  display: inline-block;
+  position: relative;
+}
+
+h2 > .magic > .magic-star {
+  --size: clamp(20px, 1.5vw, 30px);
+
+  animation: scale 700ms ease forwards;
+  display: block;
+  height: var(--size);
+  left: var(--star-left);
+  position: absolute;
+  top: var(--star-top);
+  width: var(--size);
+}
+
+h2 > .magic > .magic-star > svg {
+  display: block;
+  opacity: 0.7;
+  animation: rotate 3000ms linear infinite;
+}
+
+h2 > .magic > .magic-star > svg > path {
+  fill: rgb(149, 20, 235);
+}
+
+h2 > .magic > .magic-text {
+  animation: background-pan 3s linear infinite;
+  background: linear-gradient(
+    to right,
+    rgb(149, 20, 235),
+    rgb(44, 4, 82),
+    rgb(235, 19, 163),
+    rgb(149, 20, 235)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+  background-size: 200%;
 }
 
 body[data-nav='true'] > div > div > main {
@@ -116,4 +170,37 @@ body:not([data-nav='true']) > div > div > #nav-toggle:hover > .open {
 body[data-nav='true'] > div > div > #nav-toggle > .close {
   opacity: 1;
   transform: translate(-50%, -50%) scale(1);
+}
+
+/** Animation Stuff */
+
+@keyframes background-pan {
+  from {
+    background-position: 0% center;
+  }
+
+  to {
+    background-position: -200% center;
+  }
+}
+
+@keyframes scale {
+  from,
+  to {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(180deg);
+  }
 }
